# aegis

./: .gitmodules  .semgrepignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  M2_MAC_MINI_BENCHMARKS.md  README.md  WASM_USAGE_GUIDE.md  aegis_actionable_tickets.csv  aegis_combined_progress.md  all_output.txt  cargo.toml  commands.md  filetree.txt  generate_kat_files.sh  package-lock.json  package.json  pqcrypto_integration.md  progress-doc.md  project-structure.md  security-update.md  to-do.md  tree-pqcrypto.txt  tree.md  tree.txt  verify_demos.sh
.cargo/: config.toml
.github/workflows/: ci.yml
aegis/: Cargo.toml  build.rs  test.js  test_kyber.js
aegis/bindings/: js_bindings.rs
aegis/docs/: tech_spec.md  wallet_integration.md
aegis/examples/: browser_demo.js  secure_messaging_api.js
aegis/src/: js_bindings.rs  lib.rs  python_bindings.rs
aegis/tests/: classicmceliece_tests.rs  dilithium_tests.rs  falcon_tests.rs  kyber_tests.rs  (+1 more)
aegis_crypto_core/: Cargo.toml  README.md  create_remaining_demos.sh  errors.txt  errors_and_warnings.txt  package.json  pyproject.toml
aegis_crypto_core/.cargo/: config.toml
aegis_crypto_core/benches/: classicmceliece_benchmarks.rs  performance_benchmarks.rs
aegis_crypto_core/config/: package.json
aegis_crypto_core/demos/: DEMO_QUICK_START.md  FINAL_REORGANIZATION_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  blockchain_wallet_example.md  nist_wasm_demo.html  secure_messaging_example.md  working_examples_summary.md
aegis_crypto_core/demos/advanced-messaging/: advanced-messaging.html  advanced-messaging.js
aegis_crypto_core/demos/blockchain-wallet/: blockchain-wallet.html  blockchain-wallet.js
aegis_crypto_core/demos/demo-scripts/: README.md  start_backend.sh  start_demo.sh  start_portal.sh
aegis_crypto_core/demos/digital-identity/: digital-identity.html  digital-identity.js
aegis_crypto_core/demos/document-signing/: document-signing.html  document-signing.js
aegis_crypto_core/demos/financial-security/: financial-security.html  financial-security.js
aegis_crypto_core/demos/government-communications/: government-communications.html  government-communications.js
aegis_crypto_core/demos/healthcare-data-protection/: healthcare-data-protection.html  healthcare-data-protection.js
aegis_crypto_core/demos/interactive-learning/: interactive-learning.html  interactive-learning.js
aegis_crypto_core/demos/iot-security/: iot-security.html  iot-security.js
aegis_crypto_core/demos/ml-model-protection/: ml-model-protection.html  ml-model-protection.js
aegis_crypto_core/demos/portal/: portal.css  portal.html  portal.js
aegis_crypto_core/demos/post-quantum-blockchain/: post-quantum-blockchain.html  post-quantum-blockchain.js
aegis_crypto_core/demos/post-quantum-cloud-storage/: post-quantum-cloud-storage.html  post-quantum-cloud-storage.js
aegis_crypto_core/demos/post-quantum-database/: post-quantum-database.html  post-quantum-database.js
aegis_crypto_core/demos/quantum-key-distribution/: quantum-key-distribution.html  quantum-key-distribution.js
aegis_crypto_core/demos/quantum-resistant-iot/: quantum-resistant-iot.html  quantum-resistant-iot.js
aegis_crypto_core/demos/quantum-resistant-vpn/: quantum-resistant-vpn.html  quantum-resistant-vpn.js
aegis_crypto_core/demos/real-time-crypto/: real-time-crypto.html  real-time-crypto.js
aegis_crypto_core/demos/secure-messaging/: secure-messaging.html  secure-messaging.js
aegis_crypto_core/demos/secure-voting-system/: secure-voting-system.html  secure-voting-system.js
aegis_crypto_core/demos/smart-contract-security/: smart-contract-security.html  smart-contract-security.js
aegis_crypto_core/demos/supply-chain-security/: supply-chain-security.html  supply-chain-security.js
aegis_crypto_core/docs/: cookbook.md  document_signing_identity.md  general_purpose_pq_crypto.md  overview.md  quickstart.md  secure_messaging.md  tech_spec.md  update_document.md
aegis_crypto_core/examples/: browser_demo.html  node_demo.js  secure_messaging_browser_demo.html  secure_messaging_demo.js  wallet_integration_demo.html
aegis_crypto_core/scripts/: build-wasm-final.sh  build-wasm-memory-fixed.sh  build-wasm-minimal.sh  build-wasm.sh
aegis_crypto_core/src/: blockchain.rs  hash.rs  js_bindings.rs  lib.rs  nist_wasm_mldsa.rs  nist_wasm_mlkem.rs  performance.rs  python_bindings.rs  utils.rs  wasm_loader.rs
aegis_crypto_core/src/classicmceliece/: core.rs  mod.rs  utils.rs
aegis_crypto_core/src/dilithium/: core.rs  mod.rs  utils.rs
aegis_crypto_core/src/falcon/: core.rs  mod.rs  utils.rs
aegis_crypto_core/src/hqc/: core.rs  mod.rs  utils.rs
aegis_crypto_core/src/kyber/: core.rs  mod.rs  traits.rs  utils.rs
aegis_crypto_core/src/sphincsplus/: core.rs  mod.rs  utils.rs
aegis_crypto_core/tests/: README.md  README_BROWSER_TESTS.md  classicmceliece_browser_tests.rs  classicmceliece_native_tests.rs  classicmceliece_tests.rs  comprehensive_kat_tests.rs  dilithium_browser_tests.rs  dilithium_kat_tests.rs  dilithium_native_tests.rs  dilithium_tests.rs  dilithium_wasm_tests.rs  falcon_browser_tests.rs  falcon_kat_tests.rs  falcon_native_tests.rs  falcon_tests.rs  falcon_wasm_tests.rs  hqc_native_tests.rs  hqc_tests.rs  hqc_wasm_tests.rs  kat_tests.rs  kyber_browser_tests.rs  kyber_kat_tests.rs  kyber_native_tests.rs  kyber_tests.rs  kyber_wasm_tests.rs  minimal_mceliece.rs  runner.rs  sphincsplus_browser_tests.rs  sphincsplus_kat_tests.rs  sphincsplus_native_tests.rs  sphincsplus_tests.rs  sphincsplus_wasm_tests.rs  test.sh  test_classicmceliece.sh  test_nist_wasm.rs  test_rustpqc_integration.rs  test_wasm.sh  test_wasm_classicmceliece.sh  trait_tests.rs
docs/: AEGIS_USER_MANUAL.md  DEMO_SETUP.md  RUSTPQC_INTEGRATION.md  WASM_BUILD_SOLUTION.md  hardware_embedded_integration.md  on_chain_smart_contract_use.md  sample_programs_guide.md  tech_spec.md  test_info.md  tree-aegis.md  tree-root.md  update_document.md  working_examples_summary.md
examples/: basic-usage.js  performance-benchmark.js
pqcrypto/: Cargo.toml.bak  README.md  generate-implementations.py
(+76 files in other folders)
