[workspace]
members = [
    "aegis_crypto_core",
    "pqcrypto/pqcrypto",
    "pqcrypto/pqcrypto-traits",
    "pqcrypto/pqcrypto-internals",
    "pqcrypto/pqcrypto-mlkem",
    "pqcrypto/pqcrypto-classicmceliece",
    "pqcrypto/pqcrypto-hqc",
    "pqcrypto/pqcrypto-mldsa",
    "pqcrypto/pqcrypto-falcon",
    "pqcrypto/pqcrypto-sphincsplus",
]
default-members = ["aegis_crypto_core"]
resolver = "2"


[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"
