[package]
name = "aegis_crypto_core"
version = "0.1.0"
authors = ["Justin Hutzler <justin@synergy-network.io>"]
edition = "2021"
description = "Aegis: Unified WebAssembly, Rust, and Python PQ cryptography core with Kyber, Dilithium, Falcon, HQC, Classic McEliece, and (pending) SPHINCS+ support."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/synergy-network-hq/aegis"
homepage = "https://synergy-network.io"
documentation = "https://docs.rs/aegis_crypto_core"
keywords = ["post-quantum", "cryptography", "wasm", "rust"]
categories = ["cryptography", "wasm", "no-std"]
publish = true

[lib]
name = "aegis_crypto_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = "0.3.61"
zerocopy = "0.8.26"
pyo3 = { version = "0.17", optional = true, features = ["extension-module"] }
pqcrypto-mlkem = { path = "../pqcrypto/pqcrypto-mlkem", optional = true }
pqcrypto-mldsa = { path = "../pqcrypto/pqcrypto-mldsa", optional = true }
pqcrypto-sphincsplus = { path = "../pqcrypto/pqcrypto-sphincsplus", optional = true }
pqcrypto-falcon = { path = "../pqcrypto/pqcrypto-falcon", optional = true }
pqcrypto-hqc = { path = "../pqcrypto/pqcrypto-hqc", optional = true }
pqcrypto-classicmceliece = { path = "../pqcrypto/pqcrypto-classicmceliece", optional = true }
pqcrypto-traits = { path = "../pqcrypto/pqcrypto-traits" }
sha3 = "0.10"
blake3 = "1.5"
subtle = "2.5"
zeroize = "1.8"
getrandom = "0.3.3"
getrandom_02 = { package = "getrandom", version = "0.2.16", features = ["js"] }
rand = { version = "0.8", default-features = false, features = ["std", "rand_chacha"] }
hex = "0.4"
base64 = "0.22.1"

[dev-dependencies]
aegis_crypto_core = { path = "." }
wasm-bindgen-test = "0.3"

[build-dependencies]
cc = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = [
  "wasm",
  "kyber",
  "dilithium",
  "falcon",
  "sphincsplus",
  "hqc",
  "classicmceliece",
]
std = []
wasm = ["dep:wasm-bindgen"]
js-bindings = ["dep:wasm-bindgen"]
python-bindings = ["dep:pyo3"]
kyber = ["dep:pqcrypto-mlkem"]
dilithium = ["dep:pqcrypto-mldsa"]
falcon = ["dep:pqcrypto-falcon"]
sphincsplus = ["dep:pqcrypto-sphincsplus"]
hqc = ["dep:pqcrypto-hqc"]
classicmceliece = ["dep:pqcrypto-classicmceliece"]




[badges]
github-actions = { repository = "synergy-network-hq/aegis", workflow = "CI" }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[package.metadata.release]
no-dev-version = true

